[package]
name = "home-assistant-alexa-skill"
version = "0.1.0"
edition = "2021"

[dependencies]
derivative = "2.2"
lambda_runtime = "0.7"
monostate = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.3", features = ["v4"] }
